Fixed user name text align at the profile page

--- a/src/main/resources/static/css/profile.less
+++ b/src/main/resources/static/css/profile.less
@@ -3,7 +3,7 @@
 @import "_mediaqueries.less";
 @import "font.css";
 
-#playerName {
+#userID {
   font-family: Adesso-Klavika, sans-serif;
   text-align: center;
   margin-top: 15px;
